--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -4,3 +4,8 @@ $grey: #333;
 // Navigation colors
 $nav-text-color: white;
 $nav-background: $grey;
+
+// Clock variables
+$clock-text-color: white;
+$clock-bg-color: #B5D0E2;
+$clock-border-color: #2099E8;
